--- a/single-objective.ipynb
+++ b/single-objective.ipynb
@@ -2,153 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/haohua/.local/lib/python3.8/site-packages/deap/creator.py:185: RuntimeWarning: A class named 'FitnessMax' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
+      "/home/haohua/.local/lib/python3.8/site-packages/deap/creator.py:185: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Date      Close\n",
-      "0     27/09/2005  19.299999\n",
-      "1     28/09/2005  20.500000\n",
-      "2     29/09/2005  20.209999\n",
-      "3     30/09/2005  21.010000\n",
-      "4     03/10/2005  21.500000\n",
-      "...          ...        ...\n",
-      "4518  11/09/2023  14.090000\n",
-      "4519  12/09/2023  14.110000\n",
-      "4520  13/09/2023  13.310000\n",
-      "4521  14/09/2023  13.260000\n",
-      "4522  15/09/2023  13.310000\n",
-      "\n",
-      "[4523 rows x 2 columns]\n",
-      "             Date       Close\n",
-      "0      12/12/1980    0.128348\n",
-      "1      15/12/1980    0.121652\n",
-      "2      16/12/1980    0.112723\n",
-      "3      17/12/1980    0.115513\n",
-      "4      18/12/1980    0.118862\n",
-      "...           ...         ...\n",
-      "10775  11/09/2023  179.360001\n",
-      "10776  12/09/2023  176.300003\n",
-      "10777  13/09/2023  174.210007\n",
-      "10778  14/09/2023  175.740005\n",
-      "10779  15/09/2023  175.009995\n",
-      "\n",
-      "[10780 rows x 2 columns]\n",
-      "            Date       Close\n",
-      "0     15/05/1997    0.097917\n",
-      "1     16/05/1997    0.086458\n",
-      "2     19/05/1997    0.085417\n",
-      "3     20/05/1997    0.081771\n",
-      "4     21/05/1997    0.071354\n",
-      "...          ...         ...\n",
-      "6623  11/09/2023  143.100006\n",
-      "6624  12/09/2023  141.229996\n",
-      "6625  13/09/2023  144.850006\n",
-      "6626  14/09/2023  144.720001\n",
-      "6627  15/09/2023  140.389999\n",
-      "\n",
-      "[6628 rows x 2 columns]\n",
-      "             Date      Close\n",
-      "0      21/02/1973   4.625000\n",
-      "1      22/02/1973   4.640625\n",
-      "2      23/02/1973   4.625000\n",
-      "3      26/02/1973   4.625000\n",
-      "4      27/02/1973   4.625000\n",
-      "...           ...        ...\n",
-      "12749  11/09/2023  28.480000\n",
-      "12750  12/09/2023  28.969999\n",
-      "12751  13/09/2023  28.879999\n",
-      "12752  14/09/2023  29.200001\n",
-      "12753  15/09/2023  28.840000\n",
-      "\n",
-      "[12754 rows x 2 columns]\n",
-      "             Date      Close\n",
-      "0      01/06/1972   2.153220\n",
-      "1      02/06/1972   2.149165\n",
-      "2      05/06/1972   2.149165\n",
-      "3      06/06/1972   2.124835\n",
-      "4      07/06/1972   2.112670\n",
-      "...           ...        ...\n",
-      "12929  11/09/2023  12.220000\n",
-      "12930  12/09/2023  12.450000\n",
-      "12931  13/09/2023  12.640000\n",
-      "12932  14/09/2023  12.620000\n",
-      "12933  15/09/2023  12.610000\n",
-      "\n",
-      "[12934 rows x 2 columns]\n",
-      "            Date       Close\n",
-      "0     19/08/2004    2.499133\n",
-      "1     20/08/2004    2.697639\n",
-      "2     23/08/2004    2.724787\n",
-      "3     24/08/2004    2.611960\n",
-      "4     25/08/2004    2.640104\n",
-      "...          ...         ...\n",
-      "4797  11/09/2023  137.740005\n",
-      "4798  12/09/2023  136.070007\n",
-      "4799  13/09/2023  137.500000\n",
-      "4800  14/09/2023  138.990005\n",
-      "4801  15/09/2023  138.300003\n",
-      "\n",
-      "[4802 rows x 2 columns]\n",
-      "             Date       Close\n",
-      "0      02/01/1962    7.291268\n",
-      "1      03/01/1962    7.355003\n",
-      "2      04/01/1962    7.281708\n",
-      "3      05/01/1962    7.138305\n",
-      "4      08/01/1962    7.004461\n",
-      "...           ...         ...\n",
-      "15528  11/09/2023  148.380005\n",
-      "15529  12/09/2023  146.300003\n",
-      "15530  13/09/2023  146.550003\n",
-      "15531  14/09/2023  147.350006\n",
-      "15532  15/09/2023  145.990005\n",
-      "\n",
-      "[15533 rows x 2 columns]\n",
-      "             Date      Close\n",
-      "0      17/03/1980   0.325521\n",
-      "1      18/03/1980   0.322917\n",
-      "2      19/03/1980   0.330729\n",
-      "3      20/03/1980   0.329427\n",
-      "4      21/03/1980   0.317708\n",
-      "...           ...        ...\n",
-      "10963  11/09/2023  38.590000\n",
-      "10964  12/09/2023  38.860001\n",
-      "10965  13/09/2023  38.709999\n",
-      "10966  14/09/2023  38.669998\n",
-      "10967  15/09/2023  37.880001\n",
-      "\n",
-      "[10968 rows x 2 columns]\n",
-      "            Date       Close\n",
-      "0     22/01/1999    0.410156\n",
-      "1     25/01/1999    0.453125\n",
-      "2     26/01/1999    0.417969\n",
-      "3     27/01/1999    0.416667\n",
-      "4     28/01/1999    0.415365\n",
-      "...          ...         ...\n",
-      "6198  11/09/2023  451.779999\n",
-      "6199  12/09/2023  448.700012\n",
-      "6200  13/09/2023  454.850006\n",
-      "6201  14/09/2023  455.809998\n",
-      "6202  15/09/2023  439.000000\n",
-      "\n",
-      "[6203 rows x 2 columns]\n",
-      "             Date       Close\n",
-      "0      02/01/1962    1.578125\n",
-      "1      03/01/1962    1.601563\n",
-      "2      04/01/1962    1.605469\n",
-      "3      05/01/1962    1.570313\n",
-      "4      08/01/1962    1.566406\n",
-      "...           ...         ...\n",
-      "15528  11/09/2023  114.160004\n",
-      "15529  12/09/2023  117.489998\n",
-      "15530  13/09/2023  116.440002\n",
-      "15531  14/09/2023  118.519997\n",
-      "15532  15/09/2023  116.699997\n",
-      "\n",
-      "[15533 rows x 2 columns]\n"
+      "--Run:--\n",
+      " 0\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "initIterate() takes 2 positional arguments but 7 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=127'>128</a>\u001b[0m         data_dictionary[df_name], RSI_dictionary[df_name], price_dictionary[df_name], date_dictionary[df_name] \u001b[39m=\u001b[39m process_data(data_dictionary[df_name])\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=128'>129</a>\u001b[0m \u001b[39mfor\u001b[39;00m df_name \u001b[39min\u001b[39;00m data_dictionary:\n\u001b[0;32m--> <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=129'>130</a>\u001b[0m     algorithm(data_dictionary[df_name], RSI_dictionary[df_name], price_dictionary[df_name], date_dictionary[df_name])\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=133'>134</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmain\u001b[39m():\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=134'>135</a>\u001b[0m     \u001b[39mpass\u001b[39;00m\n",
+      "\u001b[1;32m/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=102'>103</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m--Run:--\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m, i)\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=103'>104</a>\u001b[0m \u001b[39m# create the initial population\u001b[39;00m\n\u001b[0;32m--> <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=104'>105</a>\u001b[0m pop \u001b[39m=\u001b[39m toolbox\u001b[39m.\u001b[39;49mpopulation(n\u001b[39m=\u001b[39;49mPOPULATION_SIZE) \u001b[39m# create the initial population\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=105'>106</a>\u001b[0m \u001b[39mprint\u001b[39m(pop)\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/haohua/Downloads/evolutionary-algorithms-for-stock-market-main/single-objective.ipynb#W0sZmlsZQ%3D%3D?line=106'>107</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mStarting evolution...\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/deap/tools/init.py:23\u001b[0m, in \u001b[0;36minitRepeat\u001b[0;34m(container, func, n)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39minitRepeat\u001b[39m(container, func, n):\n\u001b[1;32m      2\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Call the function *func* *n* times and return the results in a\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m    container type `container`\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[39m    See the :ref:`list-of-floats` and :ref:`population` tutorials for more examples.\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m     \u001b[39mreturn\u001b[39;00m container(func() \u001b[39mfor\u001b[39;49;00m _ \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(n))\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/deap/tools/init.py:23\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39minitRepeat\u001b[39m(container, func, n):\n\u001b[1;32m      2\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Call the function *func* *n* times and return the results in a\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m    container type `container`\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[39m    See the :ref:`list-of-floats` and :ref:`population` tutorials for more examples.\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m     \u001b[39mreturn\u001b[39;00m container(func() \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n))\n",
+      "\u001b[0;31mTypeError\u001b[0m: initIterate() takes 2 positional arguments but 7 were given"
      ]
     }
    ],
@@ -157,34 +43,129 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
+    "import random\n",
+    "from deap import base\n",
+    "from deap import creator\n",
+    "from deap import tools\n",
+    "from deap import algorithms\n",
+    "import itertools\n",
     "\n",
-    "POPULATION_SIZE = 100\n",
-    "GENERATIONS = 100\n",
-    "CROSSOVER_PROBABILITY = 0.8\n",
-    "MUTATION_PROBABILITY = 0.2\n",
-    "MAX_RUNS = 30\n",
+    "POPULATION_SIZE = 100 # number of individuals in population\n",
+    "GENERATIONS = 10000   # number of generations (evaluation rounds)\n",
+    "CROSSOVER_PROBABILITY = 0.8 # probability of crossover operation\n",
+    "MUTATION_PROBABILITY = 0.2 # probability of mutation operation\n",
+    "MAX_RUNS = 30 # number of runs with different random seeds\n",
+    "# create the fitness function\n",
+    "creator.create(\"FitnessMax\", base.Fitness, weights=(-1.0,))\n",
+    "creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
     "\n",
-    "def algorithm(data):\n",
+    "# define the parameters\n",
+    "rsi_periods = [7, 14, 21]\n",
+    "lower_range = [i for i in range(0, 51, 5)]\n",
+    "upper_range = [i for i in range(50, 101, 5)]\n",
+    "\n",
+    "def process_data(data):\n",
+    "    # only relevant from 01/01/2020 onwards to 31/12/2022 (3 years)\n",
+    "    # convert to datetime format\n",
+    "    data['Date'] = pd.to_datetime(data['Date'], format='%d/%m/%Y')\n",
+    "    data = data[data['Date'] >= '01-01-2020']\n",
+    "    data = data[data['Date'] <= '31-12-2022']\n",
+    "\n",
+    "    # calculate the difference between consecutive values in the 'Close' column\n",
+    "    data['Value_Diff'] = data['Close'].diff()\n",
+    "\n",
+    "    # create 'Gain' and 'Loss' columns based on the 'Value_Diff'\n",
+    "    data['Gain'] = data['Value_Diff'].apply(lambda x: max(0, x))\n",
+    "    data['Loss'] = data['Value_Diff'].apply(lambda x: max(0, -x))\n",
+    "\n",
+    "    # calculate the rolling sum of 'Gain' and 'Loss' for a 7-day period\n",
+    "    data['Average Gain'] = data['Gain'].rolling(window=7).mean()\n",
+    "    data['Average Loss'] = data['Loss'].rolling(window=7).mean()\n",
+    "\n",
+    "    # calculate the Relative Strength (RS)\n",
+    "    data['RS'] = data['Average Gain']/data['Average Loss']\n",
+    "\n",
+    "    # calculate the Relative Strength Index (RSI)\n",
+    "    data['RSI'] = 100 - (100/(1+data['RS']))\n",
+    "\n",
+    "    RSI = data['RSI'].values\n",
+    "    price = data['Close'].values\n",
+    "    date = data['Date'].values\n",
+    "    # Reset the index of the DataFrame\n",
+    "    data.reset_index(drop=True, inplace=True)\n",
+    "    return data, RSI, price, date\n",
+    "\n",
+    "def evaluate_individual(individual):\n",
+    "    lower_long, upper_long, lower_short, upper_short = individual\n",
+    "    roi_long = (upper_long-lower_long)/(lower_long)*100\n",
+    "    roi_short = (upper_short-lower_short)/(upper_short)*100\n",
+    "    average_roi = (roi_long + roi_short)/2\n",
+    "    return average_roi\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create the toolbox\n",
+    "toolbox = base.Toolbox()\n",
+    "\n",
+    "toolbox.register(\"rsi_period_short\", random.choice, rsi_periods)\n",
+    "toolbox.register(\"rsi_period_long\", random.choice, rsi_periods)\n",
+    "toolbox.register(\"lower_short\", random.choice, lower_range)\n",
+    "toolbox.register(\"upper_short\", random.choice, upper_range)\n",
+    "toolbox.register(\"lower_long\", random.choice, lower_range)\n",
+    "toolbox.register(\"upper_long\", random.choice, upper_range)\n",
+    "toolbox.register(\"individual\", tools.initIterate, creator.Individual, toolbox.rsi_period_short, toolbox.rsi_period_long, toolbox.lower_short, toolbox.upper_short, toolbox.lower_long, toolbox.upper_long)\n",
+    "toolbox.register(\"population\",tools.initRepeat, list, toolbox.individual)\n",
+    "\n",
+    "toolbox.register(\"select\", tools.selTournament, tournsize=3)\n",
+    "toolbox.register(\"evaluate\", evaluate_individual)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def algorithm(data, RSI, price, date):\n",
+    "    overall = []\n",
+    "    seed = 30\n",
+    "    best_individual = None\n",
+    "    best_fitness = None\n",
+    "    for i in range(MAX_RUNS):\n",
+    "        random.seed(i) # set random seed for each run\n",
+    "        print('--Run:--\\n', i)\n",
+    "        # create the initial population\n",
+    "        pop = toolbox.population(n=POPULATION_SIZE) # create the initial population\n",
+    "        print(pop)\n",
+    "        print('Starting evolution...')\n",
+    "\n",
+    "        # fitnesses = list(map(evaluate_individual, pop)) # evaluate the individuals\n",
+    "        # for ind, fit in zip(pop, fitnesses):\n",
+    "          #   ind.fitness.values = fit\n",
     "    pass\n",
+    "\n",
+    "folder_path = 'data'\n",
+    "file_list = os.listdir(folder_path)\n",
+    "data_dictionary = {}\n",
+    "RSI_dictionary = {}\n",
+    "price_dictionary = {}\n",
+    "date_dictionary = {}\n",
+    "for file_name in file_list:\n",
+    "    if file_name.endswith('.csv'):\n",
+    "        # extract the base name of the file (without the extension)\n",
+    "        df_name = os.path.splitext(file_name)[0]\n",
+    "        # construct the full file path\n",
+    "        file_path = os.path.join(folder_path, file_name)\n",
+    "            # read the CSV file into a DataFrame with the base name as the variable name\n",
+    "        data_dictionary[df_name] = pd.read_csv(file_path, sep=';', usecols=['Date', 'Close'])\n",
+    "        data_dictionary[df_name], RSI_dictionary[df_name], price_dictionary[df_name], date_dictionary[df_name] = process_data(data_dictionary[df_name])\n",
+    "for df_name in data_dictionary:\n",
+    "    algorithm(data_dictionary[df_name], RSI_dictionary[df_name], price_dictionary[df_name], date_dictionary[df_name])\n",
+    "\n",
     "\n",
     "\n",
     "def main():\n",
-    "    folder_path = 'ACI_Project2_2324_Data'\n",
-    "    file_list = os.listdir(folder_path)\n",
-    "    data_dictionary = {}\n",
-    "    for file_name in file_list:\n",
-    "        if file_name.endswith('.csv'):\n",
-    "            # extract the base name of the file (without the extension)\n",
-    "            df_name = os.path.splitext(file_name)[0]\n",
-    "            # construct the full file path\n",
-    "            file_path = os.path.join(folder_path, file_name)\n",
-    "            \n",
-    "            # read the CSV file into a DataFrame with the base name as the variable name\n",
-    "            data_dictionary[df_name] = pd.read_csv(file_path, sep=';', usecols=['Date', 'Close'])\n",
-    "\n",
+    "    pass\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    main()\n"
    ]
   }
  ],
@@ -204,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
